--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ python-dotenv==1.0.0
 streamlit
 openai==0.27.6
 faiss-cpu==1.7.4
+fastapi
+uvloop
+loguru
+
 
 # langchain==0.0.184
 # PyPDF2==3.0.1
