--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 langchain==0.0.184
 PyPDF2==3.0.1
 python-dotenv==1.0.0
-streamlit
+streamlit~=1.25.0
 openai==0.27.6
 faiss-cpu==1.7.4
-fastapi
+fastapi~=0.99.1
 uvloop
-loguru
-ngrok
+loguru~=0.7.0
+ngrok~=0.8.1
 
 # langchain==0.0.184
 # PyPDF2==3.0.1
@@ -22,3 +22,7 @@ ngrok
 # uncomment to use instructor embeddings
 # InstructorEmbedding==1.0.1
 # sentence-transformers==2.2.2
+uvicorn~=0.23.1
+pydantic~=1.10.11
+typer~=0.9.0
+appdirs~=1.4.4
