Update conversation and some refactoring

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 langchain==0.0.184
 PyPDF2==3.0.1
 python-dotenv==1.0.0
-streamlit~=1.25.0
+pycryptodome
 openai==0.27.6
 faiss-cpu==1.7.4
 fastapi~=0.99.1
 uvloop
 loguru~=0.7.0
 ngrok~=0.8.1
+appdirs
+tiktoken
+websockets
 
 # langchain==0.0.184
 # PyPDF2==3.0.1
