--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,18 @@
-langchain==0.0.184
+langchain==0.0.266
 PyPDF2==3.0.1
-python-dotenv==1.0.0
+python-dotenv==
 pycryptodome
 openai==0.27.6
 faiss-cpu==1.7.4
-fastapi~=0.99.1
+fastapi
 uvloop
-loguru~=0.7.0
-ngrok~=0.8.1
+loguru
+ngrok
 appdirs
 tiktoken
 websockets
-
-# langchain==0.0.184
-# PyPDF2==3.0.1
-# python-dotenv==1.0.0
-# streamlit==1.18.1
-# openai==0.27.6
-# faiss-cpu==1.7.4
-
-# uncomment to use huggingface llms
-# huggingface-hub==0.14.1
-
-# uncomment to use instructor embeddings
-# InstructorEmbedding==1.0.1
-# sentence-transformers==2.2.2
-uvicorn~=0.23.1
-pydantic~=1.10.11
-typer~=0.9.0
-appdirs~=1.4.4
-pywebio~=1.8.2
+uvicorn
+pydantic
+typer
+appdirs
+pywebio
